# market_entry_crew

./: README.md  pyproject.toml  training_data.pkl
db/c4711efe-0a1b-4e4e-ab55-27606fe6f205/: index_metadata.pickle
output/: company_analysis.md  competitor_analysis.md  country_analysis.md  market_research.md  product_analysis.md  report.md
results/with_tools/: company_analysis.md  competitor_analysis.md  country_analysis.md  market_research.md  product_analysis.md  report.md
results/without_tools/: company_analysis.md  competitor_analysis.md  country_analysis.md  market_research.md  product_analysis.md  report.md
src/market_entry_crew/: app.py  crew.py  main.py
src/market_entry_crew/config/: agents.yaml  tasks.yaml
