[project]
name = "market_entry_crew"
version = "0.1.0"
description = "market_entry_crew using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0",
    "streamlit",
]

[project.scripts]
market_entry_crew = "market_entry_crew.main:run"
run_crew = "market_entry_crew.main:run"
train = "market_entry_crew.main:train"
replay = "market_entry_crew.main:replay"
test = "market_entry_crew.main:test"
app = "market_entry_crew.main:streamlit_app"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"